# l2ss-py-autotest

./: .gitignore  README.md  pyproject.toml  remove_association_files.py
.github/actions/check-edl-token/: action.yml
.github/workflows/: branches.list  branches2.list  diff.yml  generate_edl_tokens.yml  new_regression.yml  process_chunk.yml  rebase.yml  regression.yml  remove_old_pr.yml  rerun.yml  rerun_checks.sh  update_shortnames.yml  verify.yml
.github/workflows/launchpad-token/: action.yml
l2ss_py_autotest/: cmr_association_diff.py
scripts/: generate_edl_tokens.py  update_issue_alert.py
tests/: aggregate_results.py  collection_names.py  config.yml  conftest.py  create_or_update_issue.py  environ.py  get_associations.py  get_cmr_token.py  overrides.example.json  overrides.json  pytest_output.txt  remove_prs.py  run_aggregate_results_local.py  token_utils.py  uat_failed.json  uat_regression_results.json  verify_collection.py  xml_to_json.py
tests/cmr/: bakup  ops_associations.txt  uat_associations.txt
tests/cmr/ops/: C1239966755-GES_DISC  C1239966757-GES_DISC  C1239966768-GES_DISC  C1239966773-GES_DISC  C1239966779-GES_DISC  C1239966787-GES_DISC  C1239966791-GES_DISC  C1239966794-GES_DISC  C1239966829-GES_DISC  C1239966837-GES_DISC  C1239966842-GES_DISC  C1266136038-GES_DISC  C1266136095-GES_DISC  C1266136097-GES_DISC  C1266136100-GES_DISC  C1266136121-GES_DISC  C1442068493-GES_DISC  C1442068507-GES_DISC  C1442068508-GES_DISC  C1442068509-GES_DISC  C1442068511-GES_DISC  C1576365803-LARC_ASDC  C1627516287-GES_DISC  C1627516288-GES_DISC  C1627516292-GES_DISC  C1627516298-GES_DISC  C1692982070-GES_DISC  C1692982075-GES_DISC  C1692982090-GES_DISC  C1720416694-GES_DISC  C1729925083-GES_DISC  C1729925099-GES_DISC  C1729925101-GES_DISC  C1729925104-GES_DISC  C1729925129-GES_DISC  C1729925130-GES_DISC  C1729925154-GES_DISC  C1729925175-GES_DISC  C1729925263-GES_DISC  C1729925368-GES_DISC  (+100 more)
tests/cmr/uat/: C1215667655-GES_DISC  C1215715440-GES_DISC  C1215718344-GES_DISC  C1215720112-GES_DISC  C1215720121-GES_DISC  C1215720122-GES_DISC  C1215720123-GES_DISC  C1215720125-GES_DISC  C1215720126-GES_DISC  C1215720327-GES_DISC  C1215720341-GES_DISC  C1215720343-GES_DISC  C1215720346-GES_DISC  C1215720348-GES_DISC  C1215720349-GES_DISC  C1215720436-GES_DISC  C1215720439-GES_DISC  C1215720440-GES_DISC  C1215720452-GES_DISC  C1215919246-GES_DISC  C1219641846-GES_DISC  C1219671503-GES_DISC  C1219700449-GES_DISC  C1220280430-GES_DISC  C1220280433-GES_DISC  C1220280436-GES_DISC  C1220280438-GES_DISC  C1220280439-GES_DISC  C1220280440-GES_DISC  (+193 more)
tests/custom/: README.md
tests/skip/: skip_reason.txt  skip_temporal_ops.csv  skip_temporal_uat.csv
(+930 files in other folders)
