[tool.poetry]
name = "l2ss-py-autotest"
version = "0.1.0"
description = "Automated tests for new associations to l2ss-py service"
authors = ["PO.DAAC <podaac@jpl.nasa.gov>"]
license = "Apache 2.0"
readme = "README.md"
packages = [{include = "l2ss_py_autotest"}]

[tool.poetry.dependencies]
python = "^3.12"
python-cmr = "^0.13.0"
harmony-py = "^1.2.0"
matplotlib = "^3.7.2"
netCDF4 = "^1.6.4"
xarray = "^2024.9.0"
cf-xarray = "^0.10.0"
l2ss-py = "^2.11.0"
pygithub = "^2.4.0"
pytest-xdist = "^3.6.1"
groq = "^0.13.1"
boto3 = "^1.38.36"
junitparser = "^3.2.0"
podaac-agents = {git = "https://github.com/podaac/podaac-agents.git"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
pytest-html = "^4.1.1"
pytest-timeout = "^2.1.0"

[tool.pytest.ini_options]
junit_logging = "log"
log_cli = "True"
log_cli_level = "INFO"
log_level = "INFO"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cmr_association_diff = "l2ss_py_autotest.cmr_association_diff:run"
